[gd_scene load_steps=19 format=3 uid="uid://qknyyawy4hpm"]

[ext_resource type="ArrayMesh" uid="uid://8kkfps6j4rwt" path="res://psyche_model.obj" id="1_i2d8k"]
[ext_resource type="Script" uid="uid://dfsegkutmgv7d" path="res://script/ui/menus/title_buttons.gd" id="2_ma2tj"]
[ext_resource type="Texture2D" uid="uid://c2f7kpqsmgkiy" path="res://logo.png" id="2_nvht2"]
[ext_resource type="PackedScene" uid="uid://bxa3pehu3cmaf" path="res://the machine.glb" id="3_lxqqj"]
[ext_resource type="FontFile" uid="uid://combfv6yu26ds" path="res://font/JockeyOne-Regular.ttf" id="3_njcy7"]
[ext_resource type="Script" uid="uid://bapmk304hosnc" path="res://script/menu_rotate_craft.gd" id="4_5c881"]
[ext_resource type="Script" uid="uid://c64kpy6lqfetr" path="res://scene/disclaimer.gd" id="4_glyem"]
[ext_resource type="Environment" uid="uid://v13wvi3yde1n" path="res://environment.tres" id="5_o862g"]
[ext_resource type="Texture2D" uid="uid://cmov2gy8huflq" path="res://gravel/Gravel009_2K-JPG_Color.jpg" id="6_6627o"]
[ext_resource type="PackedScene" uid="uid://bg5aaifp0an3b" path="res://the machine v2/craft-v2.glb" id="6_ojksg"]
[ext_resource type="Texture2D" uid="uid://c68s8j0541e7g" path="res://gravel/Gravel009_2K-JPG_NormalDX.jpg" id="7_5tkpx"]

[sub_resource type="SystemFont" id="SystemFont_0v1sy"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_5tkpx"]
albedo_texture = ExtResource("6_6627o")
normal_enabled = true
normal_texture = ExtResource("7_5tkpx")

[sub_resource type="SphereShape3D" id="SphereShape3D_icbt0"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_63xpa"]

[sub_resource type="SphereShape3D" id="SphereShape3D_rj311"]

[sub_resource type="CameraAttributesPractical" id="CameraAttributesPractical_tjc4k"]

[sub_resource type="Compositor" id="Compositor_0ug1k"]

[node name="Root" type="Node3D"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Credits" type="PanelContainer" parent="CanvasLayer"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -441.0
offset_right = 300.0
offset_bottom = 441.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Credits"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="CanvasLayer/Credits/VBoxContainer"]
layout_mode = 2
text = "CREDITS"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="CanvasLayer/Credits/VBoxContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
text = "Aria Harley
Allison Flatt
Jared Smithbauer
Mathias Nebiyou

Industry Mentor: Cassie Bowman
Advisor: Shahid Hussain
Co-Advisors: Meng Su, Jie Zhao

PBR Materials by AmbientCG.com, used with permission (Rock005, SolarPanel003, Metal046A, Metal055A, and Foil002).

Pysche Logo and Asteroid Artistic Renderings By NASA/ASU Psyche Team

This work was created in partial fulfillment of Pennsylvania State University Capstone Course “CMPSC485W/SWENG481″. The work is a result of the Psyche Student Collaborations component of NASA’s Psyche Mission (https://psyche.asu.edu/). “Psyche: A Journey to a Metal World” [Contract number NNM16AA09C] is part of the NASA Discovery Program mission to solar system targets. Trade names and trademarks of ASU and NASA are used in this work for identification only. Their usage does not constitute an official endorsement, either expressed or implied, by Arizona State University or National Aeronautics and Space Administration. The content is solely the responsibility of the authors and does not necessarily represent the official views of ASU or NASA."
autowrap_mode = 3

[node name="PsycheDisclaimer" type="PanelContainer" parent="CanvasLayer"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -70.0
offset_top = -25.0
offset_right = 70.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/PsycheDisclaimer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="CanvasLayer/PsycheDisclaimer/VBoxContainer"]
layout_mode = 2
text = "Controls Reference"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="CanvasLayer/PsycheDisclaimer/VBoxContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
text = "W, A, S, D, Q, E: Rotate Craft

Arrow Keys, Left Shift, and Control: Accelerate Craft Laterally

R: Hold to cancel rotational velocity."
autowrap_mode = 3

[node name="UI" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -198.0
offset_right = 315.0
offset_bottom = 198.0
grow_vertical = 2
size_flags_horizontal = 2
size_flags_vertical = 3
script = ExtResource("2_ma2tj")

[node name="Settings" type="VBoxContainer" parent="CanvasLayer/UI"]
visible = false
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 30

[node name="Brightness" type="HBoxContainer" parent="CanvasLayer/UI/Settings"]
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/UI/Settings/Brightness"]
layout_mode = 2
text = "Brightness"

[node name="HSlider" type="HSlider" parent="CanvasLayer/UI/Settings/Brightness"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1

[node name="Difficulty" type="HBoxContainer" parent="CanvasLayer/UI/Settings"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/UI/Settings/Difficulty"]
layout_mode = 2
text = "Difficulty"

[node name="Option" type="OptionButton" parent="CanvasLayer/UI/Settings/Difficulty"]
layout_mode = 2
selected = 1
item_count = 3
popup/item_0/text = "Easy"
popup/item_0/id = 0
popup/item_1/text = "Medium"
popup/item_1/id = 1
popup/item_2/text = "Hard"
popup/item_2/id = 2

[node name="Asteroid Scale" type="HBoxContainer" parent="CanvasLayer/UI/Settings"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/UI/Settings/Asteroid Scale"]
layout_mode = 2
text = "Asteroid Scale"

[node name="Option" type="OptionButton" parent="CanvasLayer/UI/Settings/Asteroid Scale"]
layout_mode = 2
selected = 1
item_count = 3
popup/item_0/text = "Tiny"
popup/item_0/id = 0
popup/item_1/text = "Subtle"
popup/item_1/id = 1
popup/item_2/text = "Realistic"
popup/item_2/id = 2

[node name="Back" type="Button" parent="CanvasLayer/UI/Settings"]
layout_mode = 2
text = "Back"

[node name="Title" type="VBoxContainer" parent="CanvasLayer/UI"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 30

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/UI/Title"]
layout_mode = 2

[node name="Control" type="Control" parent="CanvasLayer/UI/Title/HBoxContainer"]
clip_contents = true
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
size_flags_horizontal = 4

[node name="Logo" type="Sprite2D" parent="CanvasLayer/UI/Title/HBoxContainer/Control"]
position = Vector2(75, 75)
scale = Vector2(0.1, 0.1)
texture = ExtResource("2_nvht2")

[node name="TitleTexts" type="VBoxContainer" parent="CanvasLayer/UI/Title/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 0

[node name="Title" type="Label" parent="CanvasLayer/UI/Title/HBoxContainer/TitleTexts"]
layout_mode = 2
size_flags_vertical = 0
theme_override_colors/font_color = Color(0.976471, 0.627451, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 0)
theme_override_constants/outline_size = 24
theme_override_fonts/font = ExtResource("3_njcy7")
theme_override_font_sizes/font_size = 64
text = "PSYCHE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Subtitle" type="Label" parent="CanvasLayer/UI/Title/HBoxContainer/TitleTexts"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_colors/font_color = Color(0.976471, 0.627451, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 0)
theme_override_fonts/font = ExtResource("3_njcy7")
theme_override_font_sizes/font_size = 18
text = "SAMPLING A METAL WORLD"
horizontal_alignment = 1

[node name="Start" type="Button" parent="CanvasLayer/UI/Title"]
custom_minimum_size = Vector2(120, 32)
layout_mode = 2
size_flags_vertical = 4
theme_override_fonts/font = SubResource("SystemFont_0v1sy")
text = "Start
"

[node name="Settings" type="Button" parent="CanvasLayer/UI/Title"]
layout_mode = 2
size_flags_vertical = 4
text = "Settings"

[node name="Credits" type="Button" parent="CanvasLayer/UI/Title"]
layout_mode = 2
size_flags_vertical = 4
text = "Credits"

[node name="Disclaimer" type="Button" parent="CanvasLayer/UI/Title"]
layout_mode = 2
size_flags_vertical = 4
text = "Controls Reference"
script = ExtResource("4_glyem")

[node name="Exit" type="Button" parent="CanvasLayer/UI/Title"]
layout_mode = 2
size_flags_vertical = 4
text = "Exit
"

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, -0.5, 1, 1)

[node name="Psyche" type="RigidBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 450, -500, -343)
script = ExtResource("4_5c881")
max = 0.03

[node name="ModelParent" type="Node3D" parent="Psyche"]
transform = Transform3D(100, 0, 0, 0, 100, 0, 0, 0, 100, 0, 0, 0)

[node name="PsycheModel" type="MeshInstance3D" parent="Psyche/ModelParent"]
transform = Transform3D(1, 0, 2.98023e-08, 0, 1, 0, -2.98023e-08, 0, 1, -1.45091, -1.27135, -1.06373)
mesh = ExtResource("1_i2d8k")
skeleton = NodePath("../../../CanvasLayer/UI/Title")
surface_material_override/0 = SubResource("StandardMaterial3D_5tkpx")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Psyche"]
shape = SubResource("SphereShape3D_icbt0")
disabled = true

[node name="Craft" type="RigidBody3D" parent="."]
transform = Transform3D(0.573691, 0, 0.819072, 0, 1, 0, -0.819072, 0, 0.573691, -0.3, -0.3, -0.98)
physics_material_override = SubResource("PhysicsMaterial_63xpa")
script = ExtResource("4_5c881")

[node name="craft-v2" parent="Craft" instance=ExtResource("6_ojksg")]
transform = Transform3D(0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, 0, 0)

[node name="Model" parent="Craft" instance=ExtResource("3_lxqqj")]
transform = Transform3D(0.1, 0, -2.98023e-09, 0, 0.1, 0, 2.98023e-09, 0, 0.1, 0, 0, 0)
visible = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="Craft"]
shape = SubResource("SphereShape3D_rj311")
disabled = true

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.492834, -0.692206, 0.527224, 0, 0.605919, 0.795526, -0.870124, -0.392062, 0.298617, 0, 0, 0)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource("5_o862g")
camera_attributes = SubResource("CameraAttributesPractical_tjc4k")
compositor = SubResource("Compositor_0ug1k")

[connection signal="item_selected" from="CanvasLayer/UI/Settings/Difficulty/Option" to="CanvasLayer/UI" method="_on_difficulty_selected"]
[connection signal="item_selected" from="CanvasLayer/UI/Settings/Asteroid Scale/Option" to="CanvasLayer/UI" method="_on_scale_selected"]
[connection signal="pressed" from="CanvasLayer/UI/Settings/Back" to="CanvasLayer/UI" method="_on_settings_back_pressed"]
[connection signal="pressed" from="CanvasLayer/UI/Title/Start" to="CanvasLayer/UI" method="_on_play_pressed"]
[connection signal="pressed" from="CanvasLayer/UI/Title/Settings" to="CanvasLayer/UI" method="_on_settings_pressed"]
[connection signal="pressed" from="CanvasLayer/UI/Title/Credits" to="CanvasLayer/UI/Title/Disclaimer" method="_on_credits_pressed"]
[connection signal="pressed" from="CanvasLayer/UI/Title/Disclaimer" to="CanvasLayer/UI/Title/Disclaimer" method="_on_pressed"]
[connection signal="pressed" from="CanvasLayer/UI/Title/Exit" to="CanvasLayer/UI" method="_on_exit_pressed"]
